--- a/babel.html
+++ b/babel.html
@@ -1,22 +1,23 @@
-<html ng-app>
+<html ng-app='ui.keypress'>
   <head>
     <script type="text/javascript" src="js/ext/jquery-2.0.3.js"></script> 
     <link rel="stylesheet" href="js/ext/jquery-ui-1.10.3.custom/css/ui-lightness/jquery-ui-1.10.3.custom.css" />
     <script type="text/javascript" src="js/ext/jquery-ui-1.10.3.custom/js/jquery-ui-1.10.3.custom.js"></script> 
     <script type="text/javascript" src="js/ext/angular.js"></script> 
+    <script type="text/javascript" src="js/ext/ui-utils/modules/keypress/keypress.js"></script> 
     <script type="text/javascript" src="js/babel-lib.js"></script> 
     <script type="text/javascript" src="js/babel.js"></script> 
     <link rel="stylesheet" href="css/babel.css" />
     <title>Babel</title>
   </head>
-  <body ng-controller="Babel">
+  <body ng-controller="Babel" id="babel-controller">
     <h1>Lesson {{configuration['current_exercise']}}</h1>
     <div id="babel_window" class="ui-widget-content ui-corner-all">
       <p>
 	<span>{{exercises[currentLesson()].text}}</span>
       </p>
       <input ng-click="checkTranslation()" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only" role="button" type="button" value="Check" />
-      <input id="text" class="ui-text ui-widget ui-state-default ui-corner-all" type="text" ng-model="translation"/>
+      <input ui-keypress="{'enter':'checkTranslation()'}" id="text" class="ui-text ui-widget ui-state-default ui-corner-all" type="text" ng-model="translation"/>
     </div>
     <div id="message">
     </div>
