--- a/babel.html
+++ b/babel.html
@@ -31,6 +31,7 @@
   <body ng-controller="Babel" id="babel-controller">
     <h1>Lesson {{configuration['current_exercise']}}</h1>
     <div id="babel_window" class="ui-widget-content ui-corner-all">
+      <div id="progressbar"></div>
       <p>
 	<span>{{exercises[currentLesson()].text}}</span>
       </p>
